--- a/src/Components/PokeCard/PokeCard.css
+++ b/src/Components/PokeCard/PokeCard.css
@@ -1,16 +1,19 @@
 .pokecard {
+  font-family: 'Press Start 2P', cursive;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #f6d743;
+  /* background-color: yellow; */
   border: 1px solid #120136;
   border-radius: 5px;
   cursor: pointer;
   backface-visibility: hidden;
   transform: translateZ(0);
   transition: transform 0.25s ease-out;
-  margin: 10px;
-  width: 100px;
+  margin: 1em;
+  width: 33%;
+  height: 17vh;
   /* here width is different */
   flex-grow: 1;
 }
