--- a/src/Components/PokeSearchResult/PokeSearchResult.css
+++ b/src/Components/PokeSearchResult/PokeSearchResult.css
@@ -3,10 +3,11 @@
   flex-direction: column;
   align-items: center;
   background-color: #f6d743;
+  /* background-color: yellow; */
   border: 1px solid #120136;
   border-radius: 5px;
   margin: 10px;
-  padding: 10px;
+  padding: 30px;
   flex-grow: 1;
   min-width: 150px;
   font-family: 'Press Start 2P';
