--- a/src/Components/Pokedex/Pokedex.css
+++ b/src/Components/Pokedex/Pokedex.css
@@ -1,16 +1,17 @@
 .pokedex-container {
   background-color: #f40552;
+  /* background-color: red; */
   margin-left: 15%;
   width: 70%;
   min-height: 475px;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
   border-radius: 12px;
 }
 
 .pokelist-container {
-  width: 300px;
-  height: 455px;
+  width: 60%;
+  height: 75vh;
   overflow-y: scroll;
   background-color: rgba(252, 126, 47, 0.6);
   margin: 10px;
@@ -21,10 +22,25 @@
 .pokesearchresult-container {
   display: flex;
   align-items: center;
-  width: 300px;
+  width: 40%;
   flex-grow: 1;
   margin: 10px;
   background-color: rgba(252, 126, 47, 0.6);
-  height: 455px;
+  height: 75vh;
   border-radius: 1px 10px 10px 1px;
+}
+@media screen and (max-width: 1000px) {
+  .pokedex-container {
+    flex-direction: column-reverse;
+    width: 90%;
+    margin: 5%;
+  }
+  .pokelist-container {
+    border-radius: 10px 10px 10px 10px;
+    width: 96.5%;
+  }
+  .pokesearchresult-container {
+    border-radius: 10px 10px 10px 10px;
+    width: 96.5%;
+  }
 }
